# bwbble

./: .gitignore  test.sh
mg-aligner/: CMakeLists.txt  Makefile  ThreadPool1.h  align.c  bwt.c  exact_match.h  inexact_match.c  inexact_match.h  io.c  is.c  test.sh
